Fix bg-color-background for Dark Mode

--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 :root {
   /* DARK */
- --color-background: #1e1e1e;
+ --bg-color-background: #1e1e1e;
  --color-h1: #f5f5f5;
  --color-h2: white;
  --bg-color-summary: #323232CC;
